Added the ability to exclude directories when sending to Google Drive

--- a/InvokeAI_Colab.ipynb
+++ b/InvokeAI_Colab.ipynb
@@ -224,10 +224,18 @@
         "except:\n",
         "    print(\"Error connecting storage\")\n",
         "\n",
-        "def synchronize_directories(src_dir, dst_dir):\n",
+        "\n",
+        "def synchronize_directories(src_dir, dst_dir, exclude_dirs=None):\n",
+        "    if exclude_dirs is None:\n",
+        "        exclude_dirs = {}\n",
+        "\n",
         "    for item_name in os.listdir(src_dir):\n",
         "        src_path = os.path.join(src_dir, item_name)\n",
         "        dst_path = os.path.join(dst_dir, item_name)\n",
+        "\n",
+        "        if any(src_path.startswith(os.path.join(src_dir, exclude)) for exclude in exclude_dirs if exclude_dirs[exclude]):\n",
+        "            print(f\"Skipped: {src_path}\")\n",
+        "            continue\n",
         "\n",
         "        if os.path.isdir(src_path):\n",
         "            if os.path.exists(dst_path) and not os.path.isdir(dst_path):\n",
@@ -235,7 +243,7 @@
         "                print(f\"Deleted file: {dst_path}\")\n",
         "\n",
         "            os.makedirs(dst_path, exist_ok=True)\n",
-        "            synchronize_directories(src_path, dst_path)\n",
+        "            synchronize_directories(src_path, dst_path, exclude_dirs)\n",
         "        else:\n",
         "            if os.path.exists(dst_path) and os.path.isdir(dst_path):\n",
         "                shutil.rmtree(dst_path)\n",
@@ -257,8 +265,17 @@
         "                os.remove(dst_path)\n",
         "                print(f\"Deleted file: {dst_path}\")\n",
         "\n",
-        "synchronize_directories(invokeai_root_dir, drive_invokeai_root_dir)\n",
-        "output.clear()"
+        "exclude_flux_models = True # @param {type: \"boolean\"}\n",
+        "exclude_t5_encoder = True # @param {type: \"boolean\"}\n",
+        "exclude_clip_embed = True # @param {type: \"boolean\"}\n",
+        "\n",
+        "exclude_list = {\n",
+        "    \"flux\": exclude_flux_models,\n",
+        "    \"t5_encoder\": exclude_t5_encoder,\n",
+        "    \"clip_embed\": exclude_clip_embed\n",
+        "}\n",
+        "\n",
+        "synchronize_directories(invokeai_root_dir, drive_invokeai_root_dir, exclude_list)"
       ],
       "metadata": {
         "id": "0vmywYEmLDm0",
