feat: optimize file copying process from Google Drive

--- a/InvokeAI_Colab.ipynb
+++ b/InvokeAI_Colab.ipynb
@@ -162,12 +162,12 @@
         "except:\n",
         "    print(\"Error connecting storage\")\n",
         "\n",
-        "shutil.copytree(drive_invokeai_root_dir, invokeai_root_dir)\n",
+        "!ln -s {drive_invokeai_root_dir} {invokeai_root_dir}\n",
+        "\n",
         "output.clear()"
       ],
       "metadata": {
-        "id": "A_-y_rxTK--f",
-        "cellView": "form"
+        "id": "A_-y_rxTK--f"
       },
       "execution_count": null,
       "outputs": []
@@ -199,86 +199,6 @@
       ],
       "metadata": {
         "id": "EWcCapmsBd4G",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @markdown # Upload to google drive (optional)\n",
-        "\n",
-        "import os\n",
-        "import shutil\n",
-        "import filecmp\n",
-        "\n",
-        "from google.colab import drive, output\n",
-        "\n",
-        "drive_path = \"/content/drive\"\n",
-        "drive_invokeai_root_dir = f\"{drive_path}/MyDrive/InvokeAI/invokeai\"\n",
-        "\n",
-        "try:\n",
-        "    drive.mount(drive_path, force_remount=False)\n",
-        "    os.makedirs(drive_invokeai_root_dir, exist_ok=True)\n",
-        "except:\n",
-        "    print(\"Error connecting storage\")\n",
-        "\n",
-        "\n",
-        "def synchronize_directories(src_dir, dst_dir, exclude_dirs=None):\n",
-        "    if exclude_dirs is None:\n",
-        "        exclude_dirs = {}\n",
-        "\n",
-        "    for item_name in os.listdir(src_dir):\n",
-        "        src_path = os.path.join(src_dir, item_name)\n",
-        "        dst_path = os.path.join(dst_dir, item_name)\n",
-        "\n",
-        "        if any(src_path.startswith(os.path.join(src_dir, exclude)) for exclude in exclude_dirs if exclude_dirs[exclude]):\n",
-        "            print(f\"Skipped: {src_path}\")\n",
-        "            continue\n",
-        "\n",
-        "        if os.path.isdir(src_path):\n",
-        "            if os.path.exists(dst_path) and not os.path.isdir(dst_path):\n",
-        "                os.remove(dst_path)\n",
-        "                print(f\"Deleted file: {dst_path}\")\n",
-        "\n",
-        "            os.makedirs(dst_path, exist_ok=True)\n",
-        "            synchronize_directories(src_path, dst_path, exclude_dirs)\n",
-        "        else:\n",
-        "            if os.path.exists(dst_path) and os.path.isdir(dst_path):\n",
-        "                shutil.rmtree(dst_path)\n",
-        "                print(f\"Deleted directory: {dst_path}\")\n",
-        "\n",
-        "            if not os.path.exists(dst_path) or not filecmp.cmp(src_path, dst_path, shallow=False):\n",
-        "                shutil.copy2(src_path, dst_path)\n",
-        "                print(f\"Copied/Updated: {dst_path}\")\n",
-        "\n",
-        "    for item_name in os.listdir(dst_dir):\n",
-        "        dst_path = os.path.join(dst_dir, item_name)\n",
-        "        src_path = os.path.join(src_dir, item_name)\n",
-        "\n",
-        "        if not os.path.exists(src_path):\n",
-        "            if os.path.isdir(dst_path):\n",
-        "                shutil.rmtree(dst_path)\n",
-        "                print(f\"Deleted directory: {dst_path}\")\n",
-        "            else:\n",
-        "                os.remove(dst_path)\n",
-        "                print(f\"Deleted file: {dst_path}\")\n",
-        "\n",
-        "exclude_flux_models = True # @param {type: \"boolean\"}\n",
-        "exclude_t5_encoder = True # @param {type: \"boolean\"}\n",
-        "exclude_clip_embed = True # @param {type: \"boolean\"}\n",
-        "\n",
-        "exclude_list = {\n",
-        "    \"flux\": exclude_flux_models,\n",
-        "    \"t5_encoder\": exclude_t5_encoder,\n",
-        "    \"clip_embed\": exclude_clip_embed\n",
-        "}\n",
-        "\n",
-        "synchronize_directories(invokeai_root_dir, drive_invokeai_root_dir, exclude_list)"
-      ],
-      "metadata": {
-        "id": "0vmywYEmLDm0",
         "cellView": "form"
       },
       "execution_count": null,
