feat: update InvokeAI-Colab to support v6.0.2

--- a/InvokeAI_Colab.ipynb
+++ b/InvokeAI_Colab.ipynb
@@ -149,7 +149,6 @@
         "# @markdown # Loading from google drive (optional)\n",
         "\n",
         "import os\n",
-        "import shutil\n",
         "\n",
         "from google.colab import drive, output\n",
         "\n",
@@ -167,7 +166,8 @@
         "output.clear()"
       ],
       "metadata": {
-        "id": "A_-y_rxTK--f"
+        "id": "A_-y_rxTK--f",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
